--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,9 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
+        buildConfigField("String", "API_KEY", API_KEY)
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.example.mydemo.HiltTestRunner"
     }
 
     buildTypes {
@@ -124,5 +125,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "org.mockito:mockito-core:4.4.0"
-
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.41'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.41'
+    debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
 }
