--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
+    id 'kotlin-parcelize'
+    id "androidx.navigation.safeargs.kotlin"
     id 'dagger.hilt.android.plugin'
 }
 
@@ -66,6 +67,7 @@ dependencies {
     // Navigation Components
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
     implementation "androidx.navigation:navigation-ui-ktx:2.4.2"
+    implementation 'androidx.navigation:navigation-testing:2.4.2'
 
     // Okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
@@ -114,18 +116,24 @@ dependencies {
     testImplementation "org.robolectric:robolectric:4.4"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
     testImplementation "com.google.truth:truth:1.1.3"
-    testImplementation "org.mockito:mockito-core:4.4.0"
+    testImplementation "org.mockito:mockito-core:4.5.1"
 
     // Instrumented Unit Tests
     androidTestImplementation "junit:junit:4.13.2"
-    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.28.1"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation "com.google.truth:truth:1.1.3"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+//    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+//    androidTestImplementation 'androidx.test.espresso:espresso-accessibility:3.4.0'
+//    androidTestImplementation 'androidx.test:runner:1.4.0'
+//    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "org.mockito:mockito-core:4.4.0"
+    androidTestImplementation "org.mockito:mockito-core:4.5.1"
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.41'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.41'
-    debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
+    debugImplementation "androidx.fragment:fragment-testing:1.5.0-beta01"
 }
