--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,24 @@ android {
         testInstrumentationRunner "com.example.mydemo.HiltTestRunner"
     }
 
+    signingConfigs {
+        Properties props = new Properties()
+        props.load(new FileInputStream(file('secret/password.properties')))
+        config {
+            keyAlias props['ALIAS']
+            keyPassword props['PASSWORD']
+            storeFile file('secret/my_key')
+            storePassword props["PASSWORD"]
+            v1SigningEnabled true
+            v2SigningEnabled true
+            enableV3Signing = true
+            enableV4Signing = true
+        }
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.config
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
