--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,9 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-        
-      - name: test project
-        run: ./gradlew test && ./gradlew connectedAndroidTest
+
+      - name: Clean project
+        run: ./gradlew clean
         
       - name: Build with Gradle
         run: ./gradlew app:assembleDebug
