test github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,12 @@ jobs:
 
       - name: Clean project
         run: ./gradlew clean
+
+      - name: Unit test
+        run: ./gradlew test
+
+      - name: Android unit test
+        run: ./gradlew cAT
         
       - name: Build with Gradle
         run: ./gradlew app:assembleDebug
