--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,14 @@ jobs:
       - name: Unit test
         run: ./gradlew test
 
+      uses: reactivecircus/android-emulator-runner@v2
+        with:
+        api-level: 23
+        target: default
+        arch: x86
+        profile: Nexus 6
+        script: ./gradlew connectedCheck --stacktrace
+
       - name: Android unit test
         run: ./gradlew cAT
         
