--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -27,12 +27,15 @@ jobs:
       - name: set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: 11.0.10
+          java-version: '11'
           distribution: 'adopt'
           cache: gradle
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
+      - name: Build with Gradle
+        run: ./gradlew build
 
       - name: Clean project
         run: ./gradlew clean
@@ -46,10 +49,7 @@ jobs:
           target: default
           arch: x86
           profile: Pixel 5 API 30
-          script: ./gradlew connectedCheck --stacktrace
-
-      - name: Android unit test
-        run: ./gradlew cAT
+          script: ./gradlew connectedDebugAndroidTest -Pcucumber -Ptags="@e2e"
         
       - name: Build with Gradle
         run: ./gradlew app:assembleDebug
