test github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,14 @@ jobs:
           arch: x86_64
           profile: Nexus 6
           script: ./gradlew connectedDebugAndroidTest
-        
+
       - name: Build with Gradle
-        run: ./gradlew app:assembleDebug
-        
+        run: ./gradlew app:assemble
+
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.0.0
+        with:
+          name: app_apk
+          path: ./app/build/outputs/apk/release/app-release.apk
+          if-no-files-found: error
+          retention-days: 90
