--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.appcompat:appcompat:1.4.1"
     implementation "androidx.activity:activity-ktx:1.4.0"
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
     // Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.41"
