--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
         buildConfigField("String", "API_KEY", API_KEY)
         setProperty("archivesBaseName", "v${versionName}-${getCurrentTime()}")
         testInstrumentationRunner "com.example.mydemo.HiltTestRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     signingConfigs {
@@ -49,6 +52,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = '11'
+        useIR = true
     }
     viewBinding {
         enabled = true
@@ -61,6 +65,18 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.1.1'
+        kotlinCompilerVersion '1.5.10'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 }
 
 static def getCurrentTime() {
@@ -70,6 +86,19 @@ static def getCurrentTime() {
 dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // Compose
+    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.compose.animation:animation:1.1.1'
+    implementation 'androidx.compose.ui:ui-tooling:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
+    implementation "androidx.compose.ui:ui:1.1.1"
+    implementation "androidx.compose.material:material:1.1.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
+    // When using a MDC theme
+    implementation "com.google.android.material:compose-theme-adapter:1.1.7"
+    // When using a AppCompat theme
+    implementation "com.google.accompanist:accompanist-appcompat-theme:0.16.0"
 
     // Material Design
     implementation 'com.google.android.material:material:1.7.0-alpha01'
@@ -160,4 +189,5 @@ dependencies {
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.41'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.41'
     debugImplementation "androidx.fragment:fragment-testing:1.5.0-beta01"
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.1.1'
 }
